# maxuna

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  TODO.md  justfile
docs/: log.md  parity.md
reference/: generation_config.json  model-card.md
scripts/: bench.ts  build-llamacpp.sh  fetch-model.sh  parity-gate.ts  parity.ts  ref-dump.sh  verify_chat_template.ts
src/: attention.rs  chat.rs  config.rs  dflash.rs  generate.rs  gguf.rs  kv_cache.rs  lib.rs  model.rs  moe.rs  parity_schema.rs  rope.rs  sampler.rs  tokenizer.rs
src/ops/: attn_glue.metal  attn_glue.rs  combine.metal  combine.rs  dispatch.rs  f16.metal  f16.rs  f16_t.metal  f16_t_mixed.metal  f16_t_proto.metal  flash.metal  flash.rs  mm_id.metal  mm_id.rs  mm_id_t_hp.metal  mod.rs  mv.metal  mv_id.rs  pipelines.rs  q8.metal  q8.rs  rope.metal  silu_mul.metal  silu_mul.rs
tests/: parity.rs
tests/fixtures/: parity-prompts.json  ppl-corpus-README.md  ppl-corpus.txt  reference-ppl-laguna-s-2.1-UD-Q4_K_XL.json  reference-ppl.json
tests/fixtures/bench-prompts/: decode-630.txt  prefill-4k.txt  prefill-925.txt
