[package]
name = "laguna"
version = "0.1.0"
edition = "2024"

[dependencies]
# Pinned to the same candle rev as ../offload's voxtral port. This rev's
# candle-metal-kernels ships kernel_mul_mv_id_* / kernel_mul_mm_id_* (the
# quantized indexed MoE matmuls) in quantized.metal with no Rust host wiring —
# src/ops/ dispatches them directly, so the pin also freezes those kernel
# signatures and the public QStorage/MetalDevice surface we rely on.
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "27f20fea993c81ea6d32ce44018f42b68466525e", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "27f20fea993c81ea6d32ce44018f42b68466525e", features = ["metal"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "27f20fea993c81ea6d32ce44018f42b68466525e", features = ["metal"] }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", rev = "27f20fea993c81ea6d32ce44018f42b68466525e" }

tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
crossterm = "0.29"
unicode-width = "0.2"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
half = "2.5"
rand = "0.9"

[profile.release]
debug = true

[profile.dev]
opt-level = 1
